# UCL-PHAS0100-YamlEigenExample1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  build.sh  config.json  config.yaml  eigenexample.cpp  jsontest.cpp  result.json  result.yaml  useyaml.cpp
